# VolleySim

./: .gitignore  .pre-commit-config.yaml  load_csv.py  main.py  prepare_data.py  pyproject.toml  starting_params.py
Agents/: actions.py  bdiagent.py  behavior.py  beliefs.py  desires.py  fuzzy_rules.py  intentions.py  manager_action_strategy.py  manager_agent.py  manager_line_up_strategy.py  player_agent.py  player_strategy.py  simulator_agent.py  team.py
Game/: game.py  game_with_ia.py
Game/field/: field.py
Game/field/player/: player.py
Simulator/: build_data.py  simulation_params.py  simulator.py
Tools/: data.py  enum.py  field.py  game.py  line_up.py  player_data.py  utils.py
llm/: conf_game_llm.py  gemini.py
player/: player.py
statistics_analysis/: data_analysis.ipynb  load_data.py  save_data.py
utils/: random_gen.py
